# task-worker

./: .gitignore  .pypirc  README.en.md  README.md  pyproject.toml  setup.py  test.py
src/: TaskWorker.py
src/task-worker/: __init__.py  cleanup.py  defines.py  setting.py  util.py
src/taskworker/: __init__.py  defines.py  setting.py  taskWorker.py
src/taskworker/test/: test_single_worker.py
task_worker/: TaskWorker.py  __init__.py  defines.py
taskworker/: TaskWorker.py  WorkerPool.py  __init__.py  defines.py  setting.py  taskWorker.py  util.py  workerPool.py
test/: __init__.py  test_single_worker.py
