[build-system]
requires = [ "setuptools ~= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-worker"
authors = [
    { name = "ChenHaoYan", email = "chanhaoyan@126.com" }
]
version = "0.0.1a"
readme = "README.en.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["task-worker"]
exclude = ["test"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
